Bug 15452 - KDC encodes INT64 claims incorrectly
Summary: KDC encodes INT64 claims incorrectly
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.19.0rc2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-15 04:19 UTC by Jennifer Sutton
Modified: 2023-08-18 11:22 UTC (History)
1 user (show)

See Also:


Attachments
patch for Samba 4.19 (52.36 KB, patch)
2023-08-15 21:19 UTC, Jennifer Sutton
abartlet: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jennifer Sutton 2023-08-15 04:19:19 UTC
INT64 claim values are supposed to be aligned to eight bytes, but the 64-bit IDL type we were using to represent them is only aligned to four bytes.
Comment 1 Jennifer Sutton 2023-08-15 04:19:57 UTC
Merge request: https://gitlab.com/samba-team/samba/-/merge_requests/3224
Comment 2 Samba QA Contact 2023-08-15 19:42:03 UTC
This bug was referenced in samba master:

2c915e743d53d5e35fa31fa3965d9c9b086351ec
0cce616843395215305428b8672ffa315dbdd858
631e26e1d63040b37f48fd890ab03f7adfc6d882
402bb17693472a9c30f33a0bdf5f5f78df4066cc
aa1815519ce1412cdf25927b54b5178113cdd2a7
37fdd79cc0b83b44cb4d4c457fbb8e7410655b24
Comment 3 Jennifer Sutton 2023-08-15 21:19:02 UTC
Created attachment 18058 [details]
patch for Samba 4.19
Comment 4 Andrew Bartlett 2023-08-15 21:38:36 UTC
Assigning to Jule for next 4.19 pre-release. 

(While I have made follow-up post-merge comments on the MR, they are not important for Samba releases, just something we need to fix in master for the long term)
Comment 5 Jule Anger 2023-08-17 07:54:50 UTC
Pushed to autobuild-v4-19-test.
Comment 6 Samba QA Contact 2023-08-17 10:32:16 UTC
This bug was referenced in samba v4-19-test:

3ed80b3f1382e83bb150c023c3be99f4156cc1ae
dbf3e95eb5672a6035c0eab814911226f19198ba
0bd2b8b11480bc8b168eca228a4245dbb9687ef8
d5e0f9af62f1a0374655d30529616753bdce26e4
313c9a75980117d427d5dbc7597c2e80f9f40c7c
68c74742ed950eba7ac840da460b1b162b934654
Comment 7 Jule Anger 2023-08-17 11:27:25 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2023-08-18 11:22:35 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.0rc3):

3ed80b3f1382e83bb150c023c3be99f4156cc1ae
dbf3e95eb5672a6035c0eab814911226f19198ba
0bd2b8b11480bc8b168eca228a4245dbb9687ef8
d5e0f9af62f1a0374655d30529616753bdce26e4
313c9a75980117d427d5dbc7597c2e80f9f40c7c
68c74742ed950eba7ac840da460b1b162b934654